--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -12,11 +12,13 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "express-handlebars": "^8.0.1",
     "express-mysql-session": "^3.0.3",
     "express-session": "^1.18.0",
     "express-validator": "^7.2.0",
+    "impsproject": "file:",
     "morgan": "^1.10.0",
     "mysql2": "^3.11.2",
     "passport": "^0.7.0",
